--- a/moonBook/index.html
+++ b/moonBook/index.html
@@ -59,11 +59,13 @@
       content="/Public/lib/bookshelf/img/logo.png"
     />
     <title>阅亮书架</title>
-    <script src="//wechatfe.github.io/vconsole/lib/vconsole.min.js?v=3.3.0"></script>
+    <script type="text/javascript" src="http://tajs.qq.com/stats?sId=66141469" charset="UTF-8"></script>
+
+    <!-- <script src="//wechatfe.github.io/vconsole/lib/vconsole.min.js?v=3.3.0"></script>
     <script>
       var vConsole = new VConsole()
       console.log('Hello world')
-    </script>
+    </script> -->
   </head>
 
   <body class="theme">
