老师直接进入幼儿园

--- a/moonBook/index.html
+++ b/moonBook/index.html
@@ -61,11 +61,13 @@
     <title>阅亮书架</title>
     <script type="text/javascript" src="//tajs.qq.com/stats?sId=66141469" charset="UTF-8" ></script>
 
-    <!-- <script src="//wechatfe.github.io/vconsole/lib/vconsole.min.js?v=3.3.0"></script> -->
-    <!-- <script>
-      var vConsole = new VConsole()
-      console.log('Hello world')
-    </script> -->
+    <script src="//wechatfe.github.io/vconsole/lib/vconsole.min.js?v=3.3.0"></script>
+    <script>
+      if(location.host !='www.wmlife.net'){
+        var vConsole = new VConsole()
+        console.log('Hello world')
+      }
+    </script> 
   </head>
 
   <body class="theme">
