--- a/moonBook/index.html
+++ b/moonBook/index.html
@@ -56,15 +56,17 @@
       content="/Public/lib/bookshelf/img/logo.png"
     />
     <title>阅亮书架</title>
-    <script type="text/javascript" src="//tajs.qq.com/stats?sId=66141469" charset="UTF-8" ></script>
-
-    <script src="//wechatfe.github.io/vconsole/lib/vconsole.min.js?v=3.3.0"></script>
     <script>
-      if(location.host !='www.wmlife.net'){
-        var vConsole = new VConsole()
-        console.log('Hello world')
-      }
-    </script> 
+      var _mtac = {};
+      (function() {
+          var mta = document.createElement("script")
+          mta.src = "//pingjs.qq.com/h5/stats.js?v2.0.4"
+          mta.setAttribute("name", "MTAH5")
+          mta.setAttribute("sid", "500684388")
+          var s = document.getElementsByTagName("script")[0]
+          s.parentNode.insertBefore(mta, s)
+      })()
+    </script>
   </head>
 
   <body class="theme">
