--- a/moonBook/index.html
+++ b/moonBook/index.html
@@ -69,7 +69,7 @@
     </script>
   </head>
 
-  <body class="theme">
+  <body class="theme" ontouchstart>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
